[package]
name = "Rust-MQ"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_mq"
path = "src/lib.rs"

[dependencies]
log = "0.4.27"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1.89"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"

# Raft consensus dependencies  
raft = { version = "0.7", default-features = false, features = ["prost-codec"] }
serde_json = "1.0"
bincode = "1.3"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
byteorder = "1.4"
slog = "2.7"
slog-term = "2.9"
slog-async = "2.8"
protobuf = "3.3"

[build-dependencies]
tonic-build = "0.12"
